[CUBRIDQA-6] decrease the memory for windows platform